--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "consign": "^0.1.6",
-    "ejs": "^3.1.5",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
   }
